# tauri-demo

./: README.md  broadcast.html  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.js  vite.config.ts
src/: App.vue  Secondary.vue  secondary.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs  tray.rs
src/components/: TButton.vue
