[package]
name = "app"
version = "0.1.0"
description = "A Tauri App Demo"
authors = [ "Mulia Arifandy Nasution" ]
license = "MIT"
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = [ "api-all", "system-tray", "updater" ] }
chrono = "0.4.19"
notify-rust = "4.5.5"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
